# raymarch

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini  shaders.sh
assets/: generated.frag  scene1.glsl  shader.frag  shader_rewrite.glsl  shader_rewrite.glsl.gen
src/: app_common.hpp  app_gui.cpp  app_gui.hpp  application.cpp  application.hpp  common.hpp  imgui_impl_glfw.cpp  main.cpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
